product-fix-13. productSave()시 categoryId가 mapper 문제 때문에 저장 안되던 문제 해결
